--- a/cdk/pom.xml
+++ b/cdk/pom.xml
@@ -5,7 +5,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>airhacks</groupId>
+    <groupId>com.github.apichlinski</groupId>
     <artifactId>cdk</artifactId>
     <version>0.1</version>
     <build>
@@ -15,7 +15,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>airhacks.CDKApp</mainClass>
+                    <mainClass>com.github.apichlinski.CDKApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
